--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             <div class="container">
                 <h1 class="header__title">Recipe Me</h1>
                 <h2 class="header__subtitle">Your Gramma's digital recipe card index </h2>
+                <a href="addRecipe.html" id="add" class="addNewRecipe">+</a>
             </div>
         </header>
         <!-- <div class="looseleaf_red"></div>
