some nicer looking edit form

--- a/public/addRecipe.html
+++ b/public/addRecipe.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <h1 class="header__title">Add a recipe</h1>
                 <h2 class="header__subtitle">This is a great place to keep recipes</h2>
-                <a href="addRecipe.html" id="add" class="addNewRecipe">+</a>
+                <a href="#" id="submit" class="addNewRecipe" >GO</a>
             </div>
         </header>
 
@@ -27,7 +27,8 @@
                 <label><div>Author name</div> <input id="author" /></label>
                 <label><div>Recipe description</div> <textarea id="description"></textarea></label>
                 <label><div>Recipe article</div><textarea id="article"></textarea></label>
-                <label><div>Method</div><textarea id="directions"></textarea></label>
+                <label><div>Directions</div><textarea id="directions"></textarea></label>
+                <label><div>Categories</div><textarea id="categories"></textarea></label>
 
             </div>
             <div id="ingredients">
