--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <header class="header">
             <div class="container">
                 <h1 class="header__title">Recipe Me</h1>
-                <h2 class="header__subtitle">Your Gramma's digital recipe card index </h2>
+                <h2 class="header__subtitle">Your Digital Recipe Card Index </h2>
                 <a href="addRecipe.html" id="add" class="addNewRecipe">+</a>
             </div>
         </header>
