--- a/public/article.html
+++ b/public/article.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Parisienne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fugaz+One&family=Monsieur+La+Doulaise&family=Parisienne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+        <script src="https://kit.fontawesome.com/610bdb1969.js" crossorigin="anonymous"></script>
     <link href="./scripts/index.css" rel="stylesheet" media="screen" />
-<title>Recipe Me - Article</title>
+    <title>Recipe Me - Article</title>
 </head>
-<body>
-    <div class="container">
-        <!-- generated content goes here -->
+
+<body class="article-page">
+    <div class="page-container">
+        <div class="content-wrap">
+            <header class="header bigHeader">
+                <nav>
+                    <ul>
+                        
+                        <li>
+                            <a href="#" class="btn header-back-button" onclick="history.back()"><i class="fa-solid fa-arrow-alt-circle-left"></i><span class="hide-text">Back to article</span></a>
+                        </li>
+                        <li>
+                            <a href="./index.html" class="btn button-home"><i class="fa-solid fa-house"></i><span class="hide-text">Home</span></a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="container">
+                    <h1 class="header__title">Edit recipe</h1>
+                    <h2 class="header__subtitle"></h2>
+                </div>
+            </header>
+            <div class="container">
+                <!-- generated content goes here -->
+            </div>
+            <!--content wrap-->
+        </div>
+
+        <footer>
+            <p>COPYRIGHTs TM 1980</p>
+        </footer>
+        <!--page-container-->
     </div>
     <script src="./scripts/article-bundle.js"></script>
 </body>
+
 </html>
