Asthetic changes article page

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
                             <i class="fa fa-solid fa-magnifying-glass "></i>
                         </button>
                         <select class="dropdown" id="filter-by">
-                            <option value="byEdited">Sort by last edited</option>
-                            <option value="byCreated">Sort by recently created</option>
+                            <option value="byEdited">Sort by last modified </option>
+                            <option value="byCreated">Sort by created date</option>
                             <option value="alphabetical">Sort alphabetically</option>
                         </select>
                     
