--- a/public/article.html
+++ b/public/article.html
@@ -29,10 +29,10 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="container">
-                    <h1 class="header__title">Edit recipe</h1>
-                    <h2 class="header__subtitle"></h2>
-                </div>
+                
+                <h1 class="header__title"></h1>
+                <h2 class="header__subtitle"></h2>
+            
             </header>
             <div class="container">
                 <!-- generated content goes here -->
