--- a/public/edit.html
+++ b/public/edit.html
@@ -91,7 +91,7 @@
 
                             </div>
 
-                            <a class="btn btn-large" href="#" onclick="history.back()">Done for now</a>
+                            <a class="btn btn-large" href="#" onclick="history.back()">Done</a>
                    
                 </div>
                
