reworking the code to wait for the data to load - lots of async await massaging

--- a/public/edit.html
+++ b/public/edit.html
@@ -98,7 +98,9 @@
              </div><!--container-->
                 <!--content wrap-->
         </div>
-        <footer>Copyright 1980</footer>
+        <footer>
+            <p>&copy; Caleb Hamilton 2022</p>
+        </footer>
 
         <!-- page container-->
     </div>
