--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <div class="content-wrap">
             <header>
                 <div class="header-top">
-                    <h1 class="header__title">Recipe Me</h1>
+                    <h1 class="header__title"><a href="/">Recipe Me</a></h1>
                     <a href="#" id="menu-toggle" aria-expanded="false" aria-controls="nav" class="menu-toggle" aria-label="Open the menu">
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </a>
@@ -81,8 +81,11 @@
             <div class="container">
                
 
-                <div id="recipes">
-
+                <div id="recipes" class="cards">
+                    <a href="article.html#6d64e612-39fc-49cc-a236-f5a1fe2114af" class="card home"><article><img class="imageElement" src="/images/default-dish-image.jpg" alt="Image of Coney Island Hotdog"><div class="text-area"><h1>Coney Island Hotdog</h1><p></p></div></article></a>
+                    <a href="article.html#ccfeecb8-27c8-4119-9033-22e8a7896ce7" class="card home"><article><img class="imageElement" src="/images/default-dish-image.jpg" alt="Image of Yogi Tea"><div class="text-area"><h1>Yogi Tea</h1><p>Lighten your day with a cup of delicious tea</p></div></article></a>
+                    <a href="article.html#6a552829-9b4d-4c57-9847-21c0acef574f" class="card home"><article><img class="imageElement" src="/images/default-dish-image.jpg" alt="Image of Default Recipe Title"><div class="text-area"><h1>Brown Bread</h1><p>This great loaf has fed the world for hundreds - if not thousands of years</p></div></article></a>
+                    <a href="article.html#6a552829-9b4d-4c57-9847-21c0acef574f" class="card home"><article><img class="imageElement" src="/images/default-dish-image.jpg" alt="Image of Default Recipe Title"><div class="text-area"><h1>Raspberry Coulis</h1><p>Raspberry Coulis</p></div></article></a>
 
                 </div>
                 <div class="cards"></div>
@@ -91,7 +94,7 @@
             <!--content wrap-->
         </div>
         <footer>
-            <p>COPYRIGHTs TM 1980</p>
+            <p>&copy; Caleb Hamilton 2022</p>
         </footer>
         <!--page container-->
     </div>
