some changes to the home page mobile

--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,9 @@
                                     Filter recipes by title or author or category
                                 </legend>    
                                 <input type="text" id="search-filter" placeholder="donuts / peter / seafood" class="search-field">
-                            <!-- <button class="search-button">
+                                <button class="search-button">
                                         <i class="fa fa-solid fa-magnifying-glass "></i>
-                                    </button> -->
+                                </button> 
                             </fieldset>     
                             <div class="select">
                             <fieldset>
