added 1st draft print.css for article page (recipe) // added remove-recipe functionality // stopped tabing to nav items when hidden // modified some headings

--- a/public/index.html
+++ b/public/index.html
@@ -26,22 +26,22 @@
         <div class="content-wrap">
             <header>
                 <div class="header-top">
-                    <h1 class="header__title"><a href="/">Recipe Me</a></h1>
+                    <h1 class="site__title"><a href="/">Recipe Me</a></h1>
                     <a href="#" id="menu-toggle" aria-expanded="false" aria-controls="nav" class="menu-toggle" aria-label="Open the menu">
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </a>
                     
                 </div>
-                <nav id="nav" class="hide">
+                <nav  id="nav" class="hide">
                     <ul>
                         <li>
-                            <a href="/index.html">Home</a>
+                            <a tabindex="-1" href="/index.html">Home</a>
                         </li>
                         <li>
-                            <a href="/mission.html">Mission Statement</a>
+                            <a tabindex="-1" href="/mission.html">Mission Statement</a>
                         </li>
                         <li>
-                            <a href="/about.html">About Recipe Me</a>
+                            <a tabindex="-1" href="/about.html">About Recipe Me</a>
                         </li>
                         
                     </ul>
