--- a/public/article.html
+++ b/public/article.html
@@ -11,6 +11,7 @@
     rel="stylesheet">
         <script src="https://kit.fontawesome.com/610bdb1969.js" crossorigin="anonymous"></script>
     <link href="./scripts/index.css" rel="stylesheet" media="screen" />
+    <link href="./styles/print.css" rel="stylesheet" media="print" />
     <title>Recipe Me - Article</title>
 </head>
 
@@ -21,7 +22,7 @@
     <div class="page-container">
         <header>
             <div class="header-top">
-                <h1 class="header__title"><a href="/">Recipe Me</a></h1>
+                <h1 class="site__title"><a href="/">Recipe Me</a></h1>
                 <a href="#" id="menu-toggle" aria-expanded="false" aria-controls="nav" class="menu-toggle" aria-label="Open the menu">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </a>
@@ -31,13 +32,13 @@
             <nav id="nav" class="hide">
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a tabindex="-1" href="/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/mission.html">Mission Statement</a>
+                        <a tabindex="-1" href="/mission.html">Mission Statement</a>
                     </li>
                     <li>
-                        <a href="/about.html">About Recipe Me</a>
+                        <a tabindex="-1" href="/about.html">About Recipe Me</a>
                     </li>
                 </ul>
             </nav>
