some program debugging

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,9 @@
                     
                 </div>
                 <nav  id="nav" class="hide">
+                    
                     <ul>
+                        <li><a tabindex="-1" class="add" href="/edit.html" title="add a recipe">Add a recipe</a></li>
                         <li>
                             <a tabindex="-1" href="/index.html">Home</a>
                         </li>
