--- a/public/edit.html
+++ b/public/edit.html
@@ -10,9 +10,9 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fugaz+One&family=Monsieur+La+Doulaise&family=Parisienne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fugaz+One&family=Monsieur+La+Doulaise&family=Parisienne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/610bdb1969.js" crossorigin="anonymous"></script>
         <link href="./scripts/index.css" rel="stylesheet" media="screen" />
     <title>Recipe App - Edit</title>
@@ -72,14 +72,14 @@
                                 </div>
                                 <div>
                                     <label>
-                                        <div>Recipe Directions</div>
+                                        <div>Recipe directions</div>
                                         <textarea id="recipe-directions" class="input area tall" value=""
                                             placeholder="How do we make this?"></textarea>
                                     </label>
                                 </div>
                                 <div>
                                     <label>
-                                        <div>Recipe Categories</div>
+                                        <div>Recipe categories</div>
                                         <div id="recipe-categories" class="input area" value=""
                                             placeholder="How do we make this?"></div>
                                     </label>
