mobile homepage select stylings 123

--- a/public/edit.html
+++ b/public/edit.html
@@ -89,13 +89,17 @@
                             <div class="overlay"></div>
                             <article class="article__recipe">
                                 <header id="recipe-header">
-                                    <h1 class="header__title">Recipe</h1><button id="add-an-ingredient"><i
-                                            class="fa fa-plus"></i><span class="hide-text">Add a new
-                                            ingredient</span></i></button>
+                                    <h1 class="header__title">Recipe</h1>
                                 </header>
+                                <button id="add-an-ingredient"><i
+                                    class="fa fa-plus"></i><span class="hide-text">Add a new
+                                    ingredient</span></i>
+                                </button>
                                 <ul class="recipe">
+                                    
 
                                 </ul>
+                                
                             </article>
 
                             <div id="ingredients">
