--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>User Profile | Recipe Me</title>
-  <link rel="stylesheet" href="/scripts/profile.css" />
+  <link rel="stylesheet" href="./scripts/profile.css" />
 </head>
 <body>
   <div id="app">
