--- a/public/scripts/index.html
+++ b/public/scripts/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fugaz+One&family=Lato:wght@300;400;700&family=Monsieur+La+Doulaise&family=Parisienne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
-    <link href="./scripts/index.css" rel="stylesheet" media="screen" />
+    <link href="/scripts/index.css" rel="stylesheet" media="screen" />
 
     <title>Recipe Me</title>
 
@@ -74,7 +74,11 @@
     <div class="page-container">
         <div class="content-wrap">
            
-            <header>
+            <header><!-- At top of index.html -->
+<div class="dev-notice">
+  ⚙️ Active Development: Migrating infrastructure. Some features may be unstable.
+  <a href="https://github.com/caleb542/recipe-me">View code</a>
+</div>
                 <div class="header-top">
                     <h1 class="site__title"><a href="/">Recipe Me</a></h1>
                     
