adding proper url link

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             <header><!-- At top of index.html -->
 <div class="dev-notice">
   ⚙️ Active Development: Migrating infrastructure. Some features may be unstable.
-  <a href="https://github.com/caleb542/recipe-me">View code</a>
+  <a href="https://github.com/caleb542/recipe-app">View code</a>
 </div>
                 <div class="header-top">
                     <h1 class="site__title"><a href="/">Recipe Me</a></h1>
